force-app/main/default/objects/Project_Task__c/fields/Contingency_Plan__c.field-meta.xml
<CustomField>
    <fullName>Contingency_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>In the case of inclement weather, indoor tasks that could substitute for cancelled outdoor tasks.</inlineHelpText>
    <label>Contingency Plan</label>
    <type>Checkbox</type>
</CustomField>