force-app/main/default/objects/Project_Task__c/fields/Current_Color__c.field-meta.xml
<CustomField>
    <fullName>Current_Color__c</fullName>
    <label>Current Color</label>
    <length>40</length>
    <type>Text</type>
</CustomField>