force-app/main/default/objects/Project_Task__c/fields/Disability_Considerations__c.field-meta.xml
<CustomField>
    <fullName>Disability_Considerations__c</fullName>
    <inlineHelpText>Are there any concerns about performing this task by those with disabilities or who are pregnant? If so, are there parts of this task for which they might be better suited?</inlineHelpText>
    <label>Disability Considerations</label>
    <type>TextArea</type>
</CustomField>