force-app/main/default/objects/Project_Task__c/fields/Hazardous_Plants__c.field-meta.xml
<CustomField>
    <fullName>Hazardous_Plants__c</fullName>
    <inlineHelpText>Are there any poisonous or hazardous plants or materials in the area?</inlineHelpText>
    <label>Hazardous Plants</label>
    <length>200</length>
    <type>Text</type>
</CustomField>