force-app/main/default/objects/Project_Task__c/fields/Height__c.field-meta.xml
<CustomField>
    <fullName>Height__c</fullName>
    <inlineHelpText>Painting Height dimension in feet</inlineHelpText>
    <label>Height</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>