force-app/main/default/objects/Project_Task__c/fields/Landscaping_Area__c.field-meta.xml
<CustomField>
    <fullName>Landscaping_Area__c</fullName>
    <inlineHelpText>Approximate area affected in square feet</inlineHelpText>
    <label>Landscaping Area</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>