force-app/main/default/objects/Project_Task__c/fields/Landscaping_Task__c.field-meta.xml
<CustomField>
    <fullName>Landscaping_Task__c</fullName>
    <inlineHelpText>Pick all applicable types of landscaping for this task.  Note that you can also assign these separately to individual tasks.</inlineHelpText>
    <label>Landscaping Task</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plant Annuals</fullName>
            </value>
            <value>
                <fullName>Plant Perennials</fullName>
            </value>
            <value>
                <fullName>Plant Shrubs</fullName>
            </value>
            <value>
                <fullName>Plant Trees</fullName>
            </value>
            <value>
                <fullName>Clear brush or invasives</fullName>
            </value>
            <value>
                <fullName>Mulching</fullName>
            </value>
            <value>
                <fullName>Weeding</fullName>
            </value>
            <value>
                <fullName>Trail Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>