force-app/main/default/objects/Project_Task__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <inlineHelpText>Painting Length Dimension in feet</inlineHelpText>
    <label>Length</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>