force-app/main/default/objects/Project_Task__c/fields/Maximum_Volunteers__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Volunteers__c</fullName>
    <label>Maximum Volunteers</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>