force-app/main/default/objects/Project_Task__c/fields/Mulch_Color__c.field-meta.xml
<CustomField>
    <fullName>Mulch_Color__c</fullName>
    <label>Mulch Color</label>
    <length>40</length>
    <type>Text</type>
</CustomField>