force-app/main/default/objects/Project_Task__c/fields/Num_Volunteers_Ideal__c.field-meta.xml
<CustomField>
    <fullName>Num_Volunteers_Ideal__c</fullName>
    <inlineHelpText>Ideal number of volunteers for this task</inlineHelpText>
    <label>Ideal Num Volunteers</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>