force-app/main/default/objects/Project_Task__c/fields/Number_of_Windows__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Windows__c</fullName>
    <label>Number of Windows</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>