force-app/main/default/objects/Project_Task__c/fields/Paint_Area__c.field-meta.xml
<CustomField>
    <fullName>Paint_Area__c</fullName>
    <formula>/* manual takes precedence over computed */
if (Paint_Area_Manual__c  = 0, 
  if (Paint_Area_Computed__c = 0,
    0,
    Paint_Area_Computed__c
  ),
  Paint_Area_Manual__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paint Area</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>