force-app/main/default/objects/Project_Task__c/fields/Paint_Area_Computed__c.field-meta.xml
<CustomField>
    <fullName>Paint_Area_Computed__c</fullName>
    <formula>if (Height__c &gt; 0,
  if (and ((Width__c &gt; 0), (Length__c &gt; 0)),
    Length__c * Height__c * 2 + Width__c * Height__c * 2 + Length__c * Width__c,
    if (Width__c &gt; 0,
      Width__c * Height__c,
      if (Length__c &gt; 0,
        Length__c * Height__c,
	0
      )
    )
  ), /* here height is null */
  if (and ((Width__c &gt; 0), (Length__c &gt; 0)),
    Length__c * Width__c,
    0
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paint Area Computed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>