force-app/main/default/objects/Project_Task__c/fields/Paint_Area_Manual__c.field-meta.xml
<CustomField>
    <fullName>Paint_Area_Manual__c</fullName>
    <inlineHelpText>If it is simpler to compute the paint area manually use this even if other dimensions are given.</inlineHelpText>
    <label>Paint Area Manual</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>