force-app/main/default/objects/Project_Task__c/fields/Paint_Gallons__c.field-meta.xml
<CustomField>
    <fullName>Paint_Gallons__c</fullName>
    <formula>Paint_Area__c / 200</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paint Gallons</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>