force-app/main/default/objects/Project_Task__c/fields/Paint_Surfaces__c.field-meta.xml
<CustomField>
    <fullName>Paint_Surfaces__c</fullName>
    <label>Paint Surfaces</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Plaster</fullName>
            </value>
            <value>
                <fullName>Cinderblock</fullName>
            </value>
            <value>
                <fullName>Brick</fullName>
            </value>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>Wood</fullName>
            </value>
            <value>
                <fullName>Door/Window Frames</fullName>
            </value>
            <value>
                <fullName>Doors</fullName>
            </value>
            <value>
                <fullName>Radiators</fullName>
            </value>
            <value>
                <fullName>Baseboard</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>