force-app/main/default/objects/Project_Task__c/fields/Paint_Surfaces_Other__c.field-meta.xml
<CustomField>
    <fullName>Paint_Surfaces_Other__c</fullName>
    <label>Paint Surfaces-Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>