force-app/main/default/objects/Project_Task__c/fields/Paint_Vendor_Info__c.field-meta.xml
<CustomField>
    <fullName>Paint_Vendor_Info__c</fullName>
    <inlineHelpText>Paint vendor color name, type and finish</inlineHelpText>
    <label>Paint Vendor Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>