force-app/main/default/objects/Project_Task__c/fields/Play_Space_Task__c.field-meta.xml
<CustomField>
    <fullName>Play_Space_Task__c</fullName>
    <label>Play Space Task</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Benches</fullName>
            </value>
            <value>
                <fullName>Murals</fullName>
            </value>
            <value>
                <fullName>Playground Stencils</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>