force-app/main/default/objects/Project_Task__c/fields/Play_Space_Task_Other__c.field-meta.xml
<CustomField>
    <fullName>Play_Space_Task_Other__c</fullName>
    <inlineHelpText>If play space task not specified in picklist please describe here..</inlineHelpText>
    <label>Play Space Task-Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>