force-app/main/default/objects/Project_Task__c/fields/Project_Site_Visit__c.field-meta.xml
<CustomField>
    <fullName>Project_Site_Visit__c</fullName>
    <label>Project Site Visit</label>
    <referenceTo>Project_Site_Visit__c</referenceTo>
    <relationshipLabel>Project Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>