force-app/main/default/objects/Project_Task__c/fields/Requested_Color__c.field-meta.xml
<CustomField>
    <fullName>Requested_Color__c</fullName>
    <label>Requested Color</label>
    <length>40</length>
    <type>Text</type>
</CustomField>