force-app/main/default/objects/Project_Task__c/fields/task_id__c.field-meta.xml
<CustomField>
    <fullName>task_id__c</fullName>
    <formula>if(Contingency_Plan__c,&quot;b&quot;,&quot;a&quot;)  &amp;  lpad(text(Task_Number__c),3,&quot;0&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>task id</label>
    <type>Text</type>
</CustomField>