force-app/main/default/objects/Project_Task__c/fields/Task_Location__c.field-meta.xml
<CustomField>
    <fullName>Task_Location__c</fullName>
    <inlineHelpText>location for task whether for painting, landscaping or play space</inlineHelpText>
    <label>Task Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>