force-app/main/default/objects/Project_Task__c/fields/Task_Notes__c.field-meta.xml
<CustomField>
    <fullName>Task_Notes__c</fullName>
    <label>Task Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>