force-app/main/default/objects/Project_Task__c/fields/Task_Number__c.field-meta.xml
<CustomField>
    <fullName>Task_Number__c</fullName>
    <inlineHelpText>Tasks should be numbered separately for contingency plan tasks.</inlineHelpText>
    <label>Task Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>