force-app/main/default/objects/Project_Task__c/fields/Width__c.field-meta.xml
<CustomField>
    <fullName>Width__c</fullName>
    <inlineHelpText>Painting Width dimension in feet</inlineHelpText>
    <label>Width</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>