force-app/main/default/objects/Project_Task__c/validationRules/ideal_vs_max_volunteers.validationRule-meta.xml
<ValidationRule>
    <fullName>ideal_vs_max_volunteers</fullName>
    <active>true</active>
    <errorConditionFormula>Num_Volunteers_Ideal__c &gt; Maximum_Volunteers__c</errorConditionFormula>
    <errorMessage>Ideal volunteers must not exceed maximum volunteers</errorMessage>
</ValidationRule>