force-app/main/default/objects/Project_Task__c/validationRules/min_vs_ideal_volunteers.validationRule-meta.xml
<ValidationRule>
    <fullName>min_vs_ideal_volunteers</fullName>
    <active>true</active>
    <errorConditionFormula>Minimum_Volunteers__c  &gt;  Num_Volunteers_Ideal__c</errorConditionFormula>
    <errorMessage>Minimum volunteers must not exceed ideal volunteers</errorMessage>
</ValidationRule>