force-app/main/default/objects/Project_Task__c/validationRules/min_vs_max_volunteers.validationRule-meta.xml
<ValidationRule>
    <fullName>min_vs_max_volunteers</fullName>
    <active>true</active>
    <errorConditionFormula>Minimum_Volunteers__c  &gt;  Maximum_Volunteers__c</errorConditionFormula>
    <errorMessage>Minimum volunteers must not exceed maximum volunteers</errorMessage>
</ValidationRule>