force-app/main/default/objects/Project_Task__c/validationRules/Task_Number_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Task_Number_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Task_Number__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>Task_Number__c</errorDisplayField>
    <errorMessage>Task Number should be a positive number.</errorMessage>
</ValidationRule>